# DTCS-v.01

./: .gitignore  .readthedocs.yml  0.005t_simulated_3.csv  0.03t_simulated_3.csv  1e-06t_simulated_3.csv  404.html  Demo_Jin_05142024.ipynb  Demo_Jin_05152024.ipynb  Demo_Jin_05162024.ipynb  Front End Testing.ipynb  LICENSE.txt  MANIFEST.in  Makefile  README.md  Readme (Examples).ipynb  SCRN Pipeline.ipynb  Testing.ipynb  condition.py  crn_sym.py  data_exploration.ipynb  decomposition.py  index.html  input_specifications.md  jupyter_scrn.py  line_shapes.py  low_pressure_reaction_rules.txt  mathematica_to_python.py  mkdocs.yml  peak_fit.py  predator_prey.ipynb  process_sympy_eqs.py  pyproject.toml  raw_experiment.py  raw_measurement.py  requirements.txt  results.py  setup.py  simulation_test.ipynb  solution.py  species.py  (+4 more)
Old_Examples/: Early Simulation Stop.ipynb  Front End Testing.ipynb  Nickel Reaction.ipynb  predator_prey.ipynb
Old_Examples/Previous Examples/: Surface CRN Examples.ipynb  bulk_ag.ipynb  bulk_h2o_on_ag.ipynb  (+5 more)
api-docs/: index.html
common/: util.py
contact/: index.html
css/: extra.css
doc/: Makefile
docs/: conf.py  contact.md  examples.md  examples.rst  index.md  index.rst
dtcs/: __init__.py  __main__.py  _help.py  _logger.py  config.py  examples.py
examples/: Early Simulation Stop.ipynb  ErrorTestNetwork.ipynb  Nickel Reaction Changing Constants.ipynb  Nickel Reaction.ipynb  TestNetwork.ipynb  ag_highp_hight.ipynb  ag_lowp_rt.ipynb  ag_regp_rt.ipynb  ag_v2.ipynb  index.html  predator_prey.ipynb  reaction_network_graphing.ipynb  simulation_test.ipynb  xps_mongodb.ipynb
homogenous_crn/: Nickel Reaction.ipynb  Readme (Examples).ipynb  mathematica_to_python.py  predator_prey.ipynb  simulation_test.ipynb  solution.py  xps.py
lblcrn/: Makefile  __init__.py  __main__.py  _echo.py  _examples.py  _help.py  _logger.py  _version.py  bulk_crn.py  echo.py
license/: index.html
notebooks/: Early Simulation Stop.ipynb  TestNetwork.ipynb  reaction_network_graphing.ipynb
quickstart/: index.html
scripts/: mathematica_to_python.py  poscar_to_csv.py  process_sympy_eqs.py  run_bulk_crn.py
search/: search_index.json
test/: test_bulk_crn.py  test_crn_sym.py  test_h2o_ag_bulk.py  test_h2o_ag_surface.py  test_pkg_resources.py  test_serialize.py
tests/: bulk_test.py
(+624 files in other folders)
